--- a/Languages/default-cz.xml
+++ b/Languages/default-cz.xml
@@ -82,7 +82,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Ukázat detaily"/>
 		<rightAlign/>
 		<label text="Filtr:" tip="Zadejte určitá slova pro filtrování výsledků"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Více..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -93,7 +93,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Ukázat detaily"/>
 		<rightAlign/>
 		<label text="Filtr:" tip="Zadejte určitá slova pro filtrování výsledků"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Více..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -107,7 +107,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Ukázat detaily"/>
 		<rightAlign/>
 		<label text="Filtr:" tip="Zadejte určitá slova pro filtrování výsledků"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Více..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -126,7 +126,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Ukázat detaily"/>
 		<rightAlign/>
 		<label text="Filtr:" tip="Zadejte určitá slova pro filtrování výsledků"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Více..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -139,7 +139,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Ukázat detaily"/>
 		<rightAlign/>
 		<label text="Filtr:" tip="Zadejte určitá slova pro filtrování výsledků"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Více..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -219,32 +219,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Sdílené soubory..."/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Vytvořit album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Vymazat album"/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Vytvořit album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Vymazat album"/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Otevřít nebo přehrát"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Přidat do Playlistu"/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -257,8 +257,8 @@
 		<button id="ID_LIBRARY_COPY" text="Kopírovat"/>
 		<button id="ID_LIBRARY_DELETE" text="Vymazat"/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -266,8 +266,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Přidat do Playlistu"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Přehrát album"/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -277,8 +277,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Vlastnosti"/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -286,8 +286,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Stáhnout všechny soubory"/>
 		<rightAlign/>
-		<label text="Najít:" tip="Hledat určené slovo ve vaší knihovně"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Najít"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -297,9 +297,9 @@
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Hledat:" tip="Vyhledat pozici v přehrávání"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Hlasitost:" tip="Nastavit hlasitost"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Otevřít soubor"/>
 		<rightAlign/>
@@ -314,11 +314,11 @@
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Posuv:" tip="Vyhledat pozici v přehrávání"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Rychlost:" tip="Nastavit rychlost přehrávání"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Hlasitost:" tip="Nastavit hlasitost"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Otevřít"/>
 		<separator/>
@@ -369,10 +369,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Dotaz"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Pauza"/>
-		<button id="ID_SEARCH_CLEAR" text="Smazat"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Smazat"/>
 		<rightAlign/>
 		<label text="Filtr:" tip="Zadejte určitá slova pro filtrování výsledků"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Více..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1466,23 +1466,17 @@
 <documents>
 
 	<!-- Home View -->
-
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
-
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
-
 		<anchor id="Header" width="32" height="172"/>
 		<newline gap="0"/>
-
 		<group id="1">
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">P Ř I P O J T E &#160; S E</heading>
@@ -1727,7 +1721,7 @@
 		<text>
 			závisí na zkušenosti uživatele.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">Hlavní:</link>
 		<gap size="4"/>
@@ -1776,7 +1770,7 @@
 			zkontrolujte jak Shareaza pracuje společně s dalšími uzly uvnitř rozdělených sítí
       peer-to-peer.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">Spojení:</link>
 		<gap size="4"/>
