--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -83,7 +83,7 @@ Umlauts:
 		<button id="ID_SEARCH_DETAILS" text="Näita detailselt"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Trüki märksõnad"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Veel..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -94,7 +94,7 @@ Umlauts:
 		<button id="ID_SEARCH_DETAILS" text="Näita detailselt"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Trüki märksõnad"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Veel..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -108,7 +108,7 @@ Umlauts:
 		<button id="ID_SEARCH_DETAILS" text="Näita detailselt"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Trüki märksõnad"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Veel..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -127,7 +127,7 @@ Umlauts:
 		<button id="ID_SEARCH_DETAILS" text="Detailid"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Trüki märksõnad"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Veel..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -140,7 +140,7 @@ Umlauts:
 		<button id="ID_SEARCH_DETAILS" text="Detailid"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Trüki märksõnad"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Veel..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -220,32 +220,32 @@ Umlauts:
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Jaga faile..."/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Loo Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Kustuta Album"/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Loo Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Kustuta Album"/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Ava"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Lisa Playlisti"/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -258,8 +258,8 @@ Umlauts:
 		<button id="ID_LIBRARY_COPY" text="Kopeeri"/>
 		<button id="ID_LIBRARY_DELETE" text="Kustuta"/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -267,8 +267,8 @@ Umlauts:
 		<button id="ID_LIBRARY_ENQUEUE" text="Lisa Playlisti"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Mängi Albumit"/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -278,8 +278,8 @@ Umlauts:
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Omadused"/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -287,8 +287,8 @@ Umlauts:
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Tõmba kõik failid"/>
 		<rightAlign/>
-		<label text="Leia:" tip="Trüki märksõna"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Otsi"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -298,9 +298,9 @@ Umlauts:
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Edenemine:" tip="Mängi kohta meedia failis"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Heli:" tip="Muuda helitugevust"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Ava Fail"/>
 		<rightAlign/>
@@ -315,11 +315,11 @@ Umlauts:
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Edenemine:" tip="Mängi kohta meedia failis"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Kiirus:" tip="Muuda heli kiirust"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Heli:" tip="Muuda helitugevust"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Ava"/>
 		<separator/>
@@ -370,10 +370,10 @@ Umlauts:
 		<button id="ID_HITMONITOR_SEARCH" text="Nõutud"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Paus"/>
-		<button id="ID_SEARCH_CLEAR" text="Puhasta"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Puhasta"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Trüki märksõna"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Veel..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1467,23 +1467,17 @@ Umlauts:
 <documents>
 
 	<!-- Home View -->
-
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
-
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
-
 		<anchor id="Header" width="32" height="172"/>
 		<newline gap="0"/>
-
 		<group id="1">
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">O L E &#160; Ü H E N D A T U D</heading>
@@ -1728,7 +1722,7 @@ Umlauts:
 		<text>
 			 osas on seotud kasutusmugavusega.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">Üldine:</link>
 		<gap size="4"/>
@@ -1777,7 +1771,7 @@ Umlauts:
 			osas, kontrollib kuidas Shareaza suhtleb teiste serveritega  peer-to-peer
 			võrgus.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">Ühendused:</link>
 		<gap size="4"/>
