--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -83,7 +83,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Részletek"/>
 		<rightAlign/>
 		<label text="Szűrő:" tip="Írja be a szűrendő szavakat"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Tovább..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -94,7 +94,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Részletek"/>
 		<rightAlign/>
 		<label text="Szűrő:" tip="Írja be a szűrendő szavakat"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Tovább..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -108,7 +108,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Részletek"/>
 		<rightAlign/>
 		<label text="Szűrő:" tip="Írja be a szűrendő szavakat"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Tovább..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -127,7 +127,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Részletek"/>
 		<rightAlign/>
 		<label text="Szűrő:" tip="Írja be a szűrendő szavakat"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Tovább..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -140,7 +140,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Részletek"/>
 		<rightAlign/>
 		<label text="Szűrő:" tip="Írja be a szűrendő szavakat"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Tovább..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -220,32 +220,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Fájlok megosztása..."/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Album létrehozása..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Album törlése"/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Album létrehozása..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Album törlése"/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Megnyitás-Lejátszás"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Listához ad"/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -258,8 +258,8 @@
 		<button id="ID_LIBRARY_COPY" text="Másolás"/>
 		<button id="ID_LIBRARY_DELETE" text="Törlés"/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -267,8 +267,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Listához ad"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Album lejátszása"/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -278,8 +278,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Tulajdonságok"/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -287,8 +287,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Minden fájl letöltése"/>
 		<rightAlign/>
-		<label text="Keres:" tip="Írja be a keresendő szavakat"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Keres"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -298,9 +298,9 @@
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Keres:" tip="A médián belül keres"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Hangerő:" tip="Állítsa be a megfelelő hangerőt"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Fájl megnyitása"/>
 		<rightAlign/>
@@ -315,11 +315,11 @@
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Keres:" tip="A médián belül keres"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Sebesség:" tip="Állítsa be a lejátszás sebességét"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Hangerő:" tip="Állítsa be a megfelelő hangerőt"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Megnyitás"/>
 		<separator/>
@@ -370,10 +370,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Újra lekérdez"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Szünet"/>
-		<button id="ID_SEARCH_CLEAR" text="Törlés"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Törlés"/>
 		<rightAlign/>
 		<label text="Szűrő:" tip="Írja be a szűrendő szavakat"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Tovább..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1494,15 +1494,13 @@
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
 		<anchor id="Header" width="32" height="172"/>
@@ -1749,7 +1747,7 @@
 		<text>
 			részben a felhasználói szokásaihoz igazíthatja a programot.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CGeneralSettingsPage" format="b">Általános:</link>
 		<gap size="4"/>
 		<text>Felhasználói felület, gyorstippek, tálca, stb. beállításai.</text>
@@ -1788,7 +1786,7 @@
 			részben a különböző hálózatok beállításai
 			találhatók.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CConnectionSettingsPage" format="b">Kapcsolat:</link>
 		<gap size="4"/>
 		<text>A saját internetkapcsolatának sebessége és tulajdonságai.</text>
