--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -82,7 +82,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Details tonen"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Voer enkele woorden in om het resultaat met te filteren"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Meer..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -93,7 +93,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Details tonen"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Voer enkele woorden in om het resultaat met te filteren"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Meer..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -107,7 +107,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Details tonen"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Voer enkele woorden in om het resultaat met te filteren"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Meer..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -126,7 +126,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Details tonen"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Voer enkele woorden in om het resultaat met te filteren"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Meer..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -139,7 +139,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Details tonen"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Voer enkele woorden in om het resultaat met te filteren"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Meer..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -220,7 +220,7 @@
 		<button id="ID_LIBRARY_FOLDERS" text="Bestanden delen..."/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
@@ -228,7 +228,7 @@
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Album verwijderen"/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
@@ -236,7 +236,7 @@
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Album verwijderen"/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
@@ -244,7 +244,7 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Toevoegen aan afspeellijst"/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -258,7 +258,7 @@
 		<button id="ID_LIBRARY_DELETE" text="Verwijderen"/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -267,7 +267,7 @@
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Album afspelen"/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -278,7 +278,7 @@
 		<button id="ID_LIBRARY_PROPERTIES" text="Eigenschappen"/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -287,7 +287,7 @@
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Alle bestanden downloaden"/>
 		<rightAlign/>
 		<separator/>
-		<control id="108" width="120"/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Zoeken"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -297,9 +297,9 @@
 		<button id="ID_MEDIA_STOP" text="Stoppen"/>
 		<separator/>
 		<label text="Zoeken:" tip="Zoek naar een positie in het mediabestand"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Volume:" tip="Het geluidsvolume aanpassen"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Bestand openen"/>
 		<rightAlign/>
@@ -314,11 +314,11 @@
 		<button id="ID_MEDIA_STOP" text="Stoppen"/>
 		<separator/>
 		<label text="Zoeken:" tip="Zoek naar een positie in het mediabestand"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Snelheid:" tip="De snelheid van het mediabestand aanpassen"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Volume:" tip="Het geluidsvolume aanpassen"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Openen"/>
 		<separator/>
@@ -1489,15 +1489,13 @@
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
 		<anchor id="Header" width="32" height="172"/>
@@ -1741,7 +1739,7 @@
 		<text>
 			hebben betrekking op de gebruikerservaring.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CGeneralSettingsPage" format="b">Algemeen:</link>
 		<gap size="4"/>
 		<text>Instellingen voor de gebruikersomgeving zoals tooltips, minimaliseren, getalformaten, meldingen, enz.</text>
@@ -1780,7 +1778,7 @@
 			regelen hoe Shareaza samenwerkt met andere nodes binnen de ondersteunde P2P
 			netwerken.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CConnectionSettingsPage" format="b">Verbinding:</link>
 		<gap size="4"/>
 		<text>De snelheden en eigenschappen van je internetverbinding.</text>
