--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -40,7 +40,7 @@
 	</toolbar>
 	<toolbar name="CMainWnd.Windowed">
 		<button id="ID_NETWORK_CONNECT" text="Connectar"/>
-		<button id="ID_NETWORK_DISCNNECT"/>
+		<button id="ID_NETWORK_DISCONNECT"/>
 		<separator/>
 		<button id="ID_TAB_HOME"/>
 		<button id="ID_VIEW_SYSTEM"/>
@@ -75,7 +75,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Detalls"/>
 		<rightAlign/>
 		<label text="Filtre:" tip="Filtrar resultats amb"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Més..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -86,7 +86,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Detalls"/>
 		<rightAlign/>
 		<label text="Filtre:" tip="Filtrar resultats amb"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Més..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -100,7 +100,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Mostrar recerca"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Filtrar resultats amb:"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Més..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -119,7 +119,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Detalls"/>
 		<rightAlign/>
 		<label text="Filtre:" tip="Filtrar resultats amb"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Més..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -132,7 +132,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Detalls"/>
 		<rightAlign/>
 		<label text="Filtre:" tip="Filtrar resultats amb"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Més..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -212,32 +212,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Compartir Arxius..."/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins La Meva Col·lecció"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Crear Àlbum..."/>
-		<button id="ID_LIBRARY_ÀLBUM_DELETE" text="Esborrar Àlbum"/>
+		<button id="ID_LIBRARY_ALBUM_DELETE" text="Esborrar Àlbum"/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins La Meva Col·lecció"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Crear Àlbum..."/>
-		<button id="ID_LIBRARY_ÀLBUM_DELETE" text="Esborrar Àlbum"/>
+		<button id="ID_LIBRARY_ALBUM_DELETE" text="Esborrar Àlbum"/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins La Meva Col·lecció"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Obrir o Reproduir"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Afegir a  la llista de reproducció"/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins "/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -250,8 +250,8 @@
 		<button id="ID_LIBRARY_COPY" text="Copiar"/>
 		<button id="ID_LIBRARY_DELETE" text="Esborrar"/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins La Meva Col·lecció"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -259,8 +259,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Afegir a  la llista de reproducció"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Reproduir Àlbum"/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins La Meva Col·lecció"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -270,8 +270,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Informació de l'Arxiu..."/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins la teva col·lecció"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -279,8 +279,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Descarregar Tots Els Arxius"/>
 		<rightAlign/>
-		<label text="Cerca:" tip="Escriu algunes paraules per a cercar dins La Meva Col·lecció"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cercar"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -290,9 +290,9 @@
 		<button id="ID_MEDIA_STOP" text="Detenir"/>
 		<separator/>
 		<label text="Posició:" tip="Anar a  una Posició en l'arxiu"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Volum:" tip="Ajustar el volum"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Obrir Arxiu"/>
 		<rightAlign/>
@@ -307,11 +307,11 @@
 		<button id="ID_MEDIA_STOP" text="Detenir"/>
 		<separator/>
 		<label text="Posició:" tip="Anar a  una Posició en l'arxiu"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Velocitat:" tip="Ajustar la velocitat de reproducció (Pitch)"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Volum:" tip="Ajustar el volum"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Obrir"/>
 		<separator/>
@@ -362,21 +362,21 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Reaccedir"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Aturar"/>
-		<button id="ID_SEARCH_CLEAR" text="Netejar"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Netejar"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Filtrar resultats amb"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Més..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
 	<toolbar name="CHostCacheWnd.Basic">
 		<button id="ID_HOSTCACHE_CONNECT" text="Connectar A"/>
-		<button id="ID_HOSTCACHE_DISCNNECT" text="Desconnectar"/>
+		<button id="ID_HOSTCACHE_DISCONNECT" text="Desconnectar"/>
 		<button id="ID_HOSTCACHE_REMOVE" text="Esborrar"/>
 	</toolbar>
 	<toolbar name="CHostCacheWnd">
 		<button id="ID_HOSTCACHE_CONNECT" text="Connectar A"/>
-		<button id="ID_HOSTCACHE_DISCNNECT" text="Desconnectar"/>
+		<button id="ID_HOSTCACHE_DISCONNECT" text="Desconnectar"/>
 		<button id="ID_HOSTCACHE_REMOVE" text="Esborrar"/>
 		<rightAlign/>
 		<button id="ID_HOSTCACHE_G2_HORIZON" text="G2 Clúster"/>
@@ -397,7 +397,7 @@
 		<button id="ID_CHAT_PRIORITY" text="Donar Prioritat"/>
 		<separator/>
 		<button id="ID_CHAT_CONNECT" text="Connectar" visible="false"/>
-		<button id="ID_CHAT_DISCNNECT" text="Desconnectar"/>
+		<button id="ID_CHAT_DISCONNECT" text="Desconnectar"/>
 	</toolbar>
 </toolbars>
 
@@ -464,6 +464,7 @@
 		</menu>
 		<menu text="_Ajuda">
 			<item id="ID_HELP_FAQ" text="Guia d'Usuaris Shareaza"/>
+			<item id="ID_HELP_TEST" text="_Connection Test"/>
 			<separator/>
 			<menu text="_Guies">
 			<item id="ID_HELP_GUIDE" text="_Guia d'Usuaris Shareaza "/>
@@ -537,6 +538,7 @@
 		<menu text="_Eines">
 			<item id="ID_LIBRARY_FOLDERS" text="Compartir _Arxius..."/>
 			<item id="ID_TOOLS_DOWNLOAD" text="_Descarregar Arxiu/Torrent..."/>
+			<item id="IDC_IMPORT_DOWNLOADS" text="_Import eMule partial downloads..."/>
 			<separator/>
 			<item id="ID_TOOLS_SKIN" text="Escollir _Interfície..."/>
 			<item id="ID_TOOLS_LANGUAGE" text="Escollir un _Idioma..."/>
@@ -549,12 +551,14 @@
 		<menu text="_Finestra">
 			<item id="ID_WINDOW_NAVBAR" text="Mostrar _Barra de Navegació"/>
 			<item id="ID_WINDOW_TOOLBAR" text="Mostrar _Barra d'Eines"/>
+			<separator/>
 			<item id="ID_WINDOW_TABBAR" text="Mostrar _Barra de Pestanyes"/>
 			<item id="ID_WINDOW_MONITOR" text="Mostrar _Monitor"/>
 			<item id="ID_WINDOW_REMOTE" text="Mostrar _Control Remot"/>
 		</menu>
         <menu text="_Ajuda">
 			<item id="ID_HELP_FAQ" text="Guia d'Usuaris Shareaza"/>
+			<item id="ID_HELP_TEST" text="_Connection Test"/>
 			<separator/>
 			<menu text="_Guies">
 			<item id="ID_HELP_GUIDE" text="_Guia d'Usuaris Shareaza "/>
@@ -618,6 +622,7 @@
 		<menu text="_Eines">
 			<item id="ID_LIBRARY_FOLDERS" text="Compartir _Arxius..."/>
 			<item id="ID_TOOLS_DOWNLOAD" text="_Descarregar Arxiu/Torrent..."/>
+			<item id="IDC_IMPORT_DOWNLOADS" text="_Import eMule partial downloads..."/>
 			<separator/>
 			<item id="ID_TOOLS_SKIN" text="Escollir _Interfície..."/>
 			<item id="ID_TOOLS_LANGUAGE" text="Escollir un _Idioma..."/>
@@ -634,12 +639,14 @@
 			<separator/>
 			<item id="ID_WINDOW_NAVBAR" text="Mostrar _Barra de Navegació"/>
 			<item id="ID_WINDOW_TOOLBAR" text="Mostrar _Barra d'Eines"/>
+			<separator/>
 			<item id="ID_WINDOW_TABBAR" text="Mostrar _Barra de Pestanyes "/>
 			<item id="ID_WINDOW_MONITOR" text="Mostra  _Monitor"/>
 			<item id="ID_WINDOW_REMOTE" text="Mostra  _Remot"/>
 		</menu>
 		<menu text="_Ajuda">
 			<item id="ID_HELP_FAQ" text="Guia d'Usuaris Shareaza"/>
+			<item id="ID_HELP_TEST" text="_Connection Test"/>
 			<separator/>
 			<menu text="_Guies">
 			<item id="ID_HELP_GUIDE" text="_Guia d'Usuaris Shareaza "/>
@@ -704,7 +711,7 @@
 		<separator/>
 		<item id="ID_VIEW_SECURITY" text="Se_guretat" shortcut="F7"/>
 		<item id="ID_VIEW_HOSTS" text="Caxè d'I_Ps" shortcut="F8"/>
-		<item id="ID_VIEW_DISCVERY" text="Desc_obriment" shortcut="F9"/>
+		<item id="ID_VIEW_DISCOVERY" text="Desc_obriment" shortcut="F9"/>
 		<item id="ID_VIEW_TRAFFIC" text="_Gràfic" shortcut="F10"/>
 		<separator/>
 		<item id="ID_VIEW_PACKETS" text="Monitor de paquets" shortcut="Ctrl+F1"/>
@@ -770,7 +777,7 @@
 		<separator/>
 		<item id="ID_VIEW_SECURITY" text="Se_guretat"/>
 		<item id="ID_VIEW_HOSTS" text="_Caxè de Servidors"/>
-		<item id="ID_VIEW_DISCVERY" text="_Descobriment"/>
+		<item id="ID_VIEW_DISCOVERY" text="_Descobriment"/>
 		<item id="ID_VIEW_TRAFFIC" text="_Gràfic"/>
 		<separator/>
 		<item id="ID_VIEW_PACKETS" text="_Monitor de paquets"/>
@@ -781,6 +788,7 @@
 	<menu name="CHostCacheWnd">
 		<item id="ID_HOSTCACHE_CONNECT" text="_Connectar Ara"/>
 		<item id="ID_HOSTCACHE_DISCNNECT" text="_Desconnectar"/>
+		<item id="ID_NEIGHBOURS_COPY" text="Copy _URI"/>
 		<item id="ID_HOSTCACHE_PRIORITY" text="_Servidor amb Prioritat"/>
 		<separator/>
 		<item id="ID_HOSTCACHE_REMOVE" text="_Esborrar IP"/>
@@ -806,7 +814,7 @@
 			<item id="ID_SEARCH_FOR_SIMILAR" text="Arxius Similars"/>
 			<separator/>
 			<item id="ID_SEARCH_FOR_ARTIST" text="Música d'aquest Artista"/>
-			<item id="ID_SEARCH_FOR_ÀLBUM" text="Música d'aquest Àlbum"/>
+			<item id="ID_SEARCH_FOR_ALBUM" text="Música d'aquest Àlbum"/>
 			<item id="ID_SEARCH_FOR_SERIES" text="Episodis d'aquesta Serie"/>
 		</menu>
 		<menu text="Serveis _Web">
@@ -828,7 +836,7 @@
 			<item id="ID_SEARCH_FOR_SIMILAR" text="Arxius Similars"/>
 			<separator/>
 			<item id="ID_SEARCH_FOR_ARTIST" text="Música d'aquest Artista"/>
-			<item id="ID_SEARCH_FOR_ÀLBUM" text="Música d'aquest Àlbum"/>
+			<item id="ID_SEARCH_FOR_ALBUM" text="Música d'aquest Àlbum"/>
 			<item id="ID_SEARCH_FOR_SERIES" text="Episodis d'aquesta Serie"/>
 		</menu>
 		<menu text="_Web">
@@ -963,6 +971,7 @@
 		<separator/>
 		<item id="ID_BROWSE_LAUNCH" text="_Explorar Usuari"/>
 		<item id="ID_TRANSFERS_CHAT" text="_Xat amb Usuari"/>
+		<item id="ID_DOWNLOADS_COPY" text="Copy _URI"/>
 		<separator/>
 		<item id="ID_TRANSFERS_DISCONNECT" text="_Desconnectar"/>
 		<item id="ID_TRANSFERS_FORGET" text="_Oblidar"/>
@@ -1318,6 +1327,8 @@
 	</menu>
 	<menu name="CMediaList">
 		<item id="ID_MEDIA_SELECT" text="_Reproduir"/>
+		<item id="ID_MEDIA_RATE" text="Ra_te File..."/>
+		<item id="ID_MEDIA_PROPERTIES" text="_Properties..."/>
 		<separator/>
 		<item id="ID_MEDIA_ADD" text="_Afegir arxiu..."/>
 		<item id="ID_MEDIA_ADD_FOLDER" text="Afegir _Carpeta..."/>
@@ -1433,7 +1444,7 @@
 		<item id="ID_CHAT_DISCONNECT" text="_Desconnectar"/>
 		<separator/>
 		<item id="ID_CHAT_BROWSE" text="_Explorar"/>
-		<item id="ID_CHAT_SEND_FILE" text="E_nviar arxiu..."/>
+		<!-- <item id="ID_CHAT_SEND_FILE" text="E_nviar arxiu..."/> -->
 		<item id="ID_CHAT_PRIORITY" text="_Prioritat"/>
 		<separator/>
 		<menu text="_Format">
@@ -1459,23 +1470,17 @@
 <documents>
 
 	<!-- Home View -->
-
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
-
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
-
 		<anchor id="Header" width="32" height="172"/>
 		<newline gap="0"/>
-
 		<group id="1">
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">C O N N E C T A ' T</heading>
@@ -1748,7 +1753,7 @@
 		<text>
 			està relacionada amb l'experiència de l'usuari.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">General:</link>
 		<gap size="4"/>
@@ -1796,7 +1801,7 @@
 		<text>
 			permet configurar la interacció de Shareaza amb les xarxes peer-to-peer.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">Connexió:</link>
 		<gap size="4"/>
