--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -81,7 +81,7 @@
 		<button id="ID_SEARCH_DETAILS" text="N&#228;yt&#228; Tiedot"/>
 		<rightAlign/>
 		<label text="Suodatin" tip="Kirjoita sanoja joilla haluat suodattaa hakuasi"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Lis&#228;&#228;..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -92,7 +92,7 @@
 		<button id="ID_SEARCH_DETAILS" text="N&#228;yt&#228; Tiedot"/>
 		<rightAlign/>
 		<label text="Suodatin" tip="Kirjoita sanoja joilla haluat suodattaa hakuasi"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Lis&#228;&#228;..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -106,7 +106,7 @@
 		<button id="ID_SEARCH_DETAILS" text="N&#228;yt&#228; Tiedot"/>
 		<rightAlign/>
 		<label text="Suodatin" tip="Kirjoita sanoja joilla haluat suodattaa hakuasi"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Lis&#228;&#228;..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -125,7 +125,7 @@
 		<button id="ID_SEARCH_DETAILS" text="N&#228;yt&#228; Tiedot"/>
 		<rightAlign/>
 		<label text="Suodatin" tip="Kirjoita sanoja joilla haluat suodattaa hakuasi"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Lis&#228;&#228;..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -138,7 +138,7 @@
 		<button id="ID_SEARCH_DETAILS" text="N&#228;yt&#228; Tiedot"/>
 		<rightAlign/>
 		<label text="Suodatin" tip="Kirjoita sanoja joilla haluat suodattaa hakuasi"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Lis&#228;&#228;..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -218,32 +218,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Jaa tiedostoja..."/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Luo Albumi"/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Poista Albumi"/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Luo Albumi"/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Poista Albumi"/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Avaa tai Toista"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Lis&#228;&#228; Soittolistaan"/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -256,8 +256,8 @@
 		<button id="ID_LIBRARY_COPY" text="Kopioi"/>
 		<button id="ID_LIBRARY_DELETE" text="Poista"/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -265,8 +265,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Lis&#228;&#228; Soittolistaan"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Toista Albumi"/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -276,8 +276,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Ominaisuudet"/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -285,8 +285,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Lataa Kaikki Tiedostot"/>
 		<rightAlign/>
-		<label text="Etsi;" tip="Kirjoita sanoja etsi&#228;ksesi kirjastostasi"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Etsi"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -296,9 +296,9 @@
 		<button id="ID_MEDIA_STOP" text="Pys&#228;yt&#228;"/>
 		<separator/>
 		<label text="Hae:" tip="Hae kohtaan media tiedostossa"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Voimakkuus" tip="S&#228;&#228;d&#228; &#228;&#228;nen voimakkuuta"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Avaa Tiedosto"/>
 		<rightAlign/>
@@ -313,11 +313,11 @@
 		<button id="ID_MEDIA_STOP" text="Pys&#228;yt&#228;"/>
 		<separator/>
 		<label text="Hae:" tip="Hae kohtaan media tiedostossa"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Nopeus:" tip="S&#228;&#228;d&#228; mediatiedoston toisto nopeutta"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Voimakkuus" tip="S&#228;&#228;d&#228; &#228;&#228;nen voimakkuuta"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Avaa"/>
 		<separator/>
@@ -368,10 +368,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Kysy Uudelleen"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Keskeyt&#228;"/>
-		<button id="ID_SEARCH_CLEAR" text="Tyhjenn&#228;"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Tyhjenn&#228;"/>
 		<rightAlign/>
 		<label text="Suodatin" tip="Kirjoita sanoja joilla haluat suodattaa hakuasi"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Lis&#228;&#228;..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1464,23 +1464,17 @@
 <documents>
 
 	<!-- Home View -->
-
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
-
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
-
 		<anchor id="Header" width="32" height="172"/>
 		<newline gap="0"/>
-
 		<group id="1">
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">Y H D I S T &#196; &#160; N Y T</heading>
@@ -1725,7 +1719,7 @@
 		<text>
 			alue joka liittyy k&#228;ytt&#246; kokemukseen.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">Yleinen:</link>
 		<gap size="4"/>
@@ -1774,7 +1768,7 @@
 			alue joka kontrolloi kuinka Shareaza k&#228;ytt&#228;ytyy toisien koneiden kanssa jaetuissa p2p
 			verkoissa.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">Yhteys:</link>
 		<gap size="4"/>
