--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -74,7 +74,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Δείξε λεπτομέρειες"/>
 		<rightAlign/>
 		<label text="Φίλτρο:" tip="Γράψε μερικές λέξεις για να  φιλτράρεις τα αποτελέσματα"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Περισσότερα..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -85,21 +85,21 @@
 		<button id="ID_SEARCH_DETAILS" text="Δείξε λεπτομέρειες"/>
 		<rightAlign/>
 		<label text="Φίλτρο:" tip="Γράψε μερικές λέξεις για να  φιλτράρεις τα αποτελέσματα"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Περισσότερα..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
-		<button id="ID_SEARCH_DOWNLOAD" text="Κατέβασμα"/>
-		<button id="ID_BROWSE_LAUNCH" text="Έρευνα αρχείων του χρήστη"/>
-		<separator/>
 		<button id="ID_SEARCH_SEARCH" text="Ψάξε ξανά..."/>
 		<button id="ID_SEARCH_STOP" text="Σταμάτα!"/>
+		<separator/>
+		<button id="ID_SEARCH_DOWNLOAD" text="Κατέβασμα"/>
+		<button id="ID_BROWSE_LAUNCH" text="Έρευνα αρχείων του χρήστη"/>
 		<separator/>
 		<button id="ID_SEARCH_PANEL" text="Δείξε τα αποτελέσματα"/>
 		<button id="ID_SEARCH_DETAILS" text="Δείξε λεπτομέρειες"/>
 		<rightAlign/>
 		<label text="Φίλτρο:" tip="Γράψε μερικές λέξεις για να  φιλτράρεις τα αποτελέσματα"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Περισσότερα..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -118,7 +118,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Δείξε λεπτομέρειες"/>
 		<rightAlign/>
 		<label text="Φίλτρο:" tip="Γράψε μερικές λέξεις για να  φιλτράρεις τα αποτελέσματα"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Περισσότερα..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -131,7 +131,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Δείξε λεπτομέρειες"/>
 		<rightAlign/>
 		<label text="Φίλτρο:" tip="Γράψε μερικές λέξεις για να  φιλτράρεις τα αποτελέσματα"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Περισσότερα..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -211,32 +211,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Τα αρχεία που μοιράζεις..."/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Δημιούργησε ένα Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Διέγραψε το Album"/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Δημιούργησε ένα Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Διέγραψε το Album"/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Άνοιξε ή παίξε"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Βάλε τα αρχεία στην Λίστα Αναπαραγωγής"/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -249,8 +249,8 @@
 		<button id="ID_LIBRARY_COPY" text="Αντέγραψε"/>
 		<button id="ID_LIBRARY_DELETE" text="Διέγραψε"/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -258,8 +258,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Βάλε τα αρχεία στην Λίστα Αναπαραγωγής"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Αναπαραγωγή των αρχείων του φακέλου"/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -269,8 +269,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Ιδιότητες"/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -278,8 +278,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Κατέβασε όλα τα αρχεία"/>
 		<rightAlign/>
-		<label text="Έρευνα:" tip="Γράψε μερικές λέξεις για να ψάξεις στην Βιβλιοθήκη"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Βρες"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -289,9 +289,9 @@
 		<button id="ID_MEDIA_STOP" text="Διακοπή"/>
 		<separator/>
 		<label text="Αναζήτηση:" tip="Αναζήτησε μια θέση στο video"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Ένταση:" tip="Προσάρμοσε τον ήχο"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Άνοιξε το αρχείο"/>
 		<rightAlign/>
@@ -306,11 +306,11 @@
 		<button id="ID_MEDIA_STOP" text="Διακοπή"/>
 		<separator/>
 		<label text="Αναζήτηση:" tip="Αναζήτησε μια θέση στο video"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Ταχύτητα:" tip="Προσάρμοσε την ταχύτητα του video"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Ένταση:" tip="Προσάρμοσε τον ήχο"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Άνοιξε"/>
 		<separator/>
@@ -361,10 +361,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Αίτηση"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Παύση"/>
-		<button id="ID_SEARCH_CLEAR" text="Καθάρισε"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Καθάρισε"/>
 		<rightAlign/>
 		<label text="Φίλτρο:" tip="Γράψε μερικές λέξεις για να  φιλτράρεις τα αποτελέσματα"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Περισσότερα..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1457,23 +1457,17 @@
 <documents>
 
 	<!-- Home View -->
-
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
-
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
-
 		<anchor id="Header" width="32" height="172"/>
 		<newline gap="0"/>
-
 		<group id="1">
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">G E T &#160; C O N N E C T E D</heading>
@@ -1718,7 +1712,7 @@
 		<text>
 		αφορούν στο επίπεδο γνώσης των χρηστών
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">Γενικά:</link>
 		<gap size="4"/>
@@ -1766,7 +1760,7 @@
 		<text>
 		διαχερίζονται το πως το Shareaza αλληλεπιδρά με τα άλλα nodes μέσα στο κατανεμημένο δίκτυο peer-to-peer.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">Σύνδεση:</link>
 		<gap size="4"/>
