--- a/Languages/default-heb.xml
+++ b/Languages/default-heb.xml
@@ -75,7 +75,7 @@
 		<button id="ID_SEARCH_DETAILS" text="‪הצג פרטי חיפוש"/>
 		<rightAlign/>
 		<label text="‪...מסנן" tip="הקלד מספר מילים לסינון תוצאות החיפוש"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="‪...עוד"/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -86,7 +86,7 @@
 		<button id="ID_SEARCH_DETAILS" text="‪הצג פרטי חיפוש"/>
 		<rightAlign/>
 		<label text="‪...מסנן" tip="הקלד מספר מילים לסינון תוצאות החיפוש"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="‪...עוד"/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -100,7 +100,7 @@
 		<button id="ID_SEARCH_DETAILS" text="‪הצג פרטי חיפוש"/>
 		<rightAlign/>
 		<label text="‪...מסנן" tip="הקלד מספר מילים לסינון תוצאות החיפוש"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="‪...עוד"/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -119,7 +119,7 @@
 		<button id="ID_SEARCH_DETAILS" text="‪הצג פרטים"/>
 		<rightAlign/>
 		<label text="‪‪...מסנן" tip="הקלד מספר מילים לסינון תוצאות החיפוש"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="‪...עוד"/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -132,7 +132,7 @@
 		<button id="ID_SEARCH_DETAILS" text="‪הצג פרטים"/>
 		<rightAlign/>
 		<label text="‪...מסנן" tip="הקלד מספר מילים לסינון תוצאות החיפוש"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="‪...עוד"/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -212,32 +212,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="‪...שתף קבצים"/>
 		<rightAlign/>
-		<label text="חפש:" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="‪...צור אלבום"/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="‪מחק אלבום"/>
 		<rightAlign/>
-		<label text="חפש:" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="‪...צור אלבום"/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="‪מחק אלבום"/>
 		<rightAlign/>
-		<label text="חפש:" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="‪פתח או הפעל"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="‪הוסף לרשימת השמעה"/>
 		<rightAlign/>
-		<label text=":‪חפש" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -250,8 +250,8 @@
 		<button id="ID_LIBRARY_COPY" text="‪העתק"/>
 		<button id="ID_LIBRARY_DELETE" text="‪מחק"/>
 		<rightAlign/>
-		<label text="חפש:" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -259,8 +259,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="‪הוסף לרשימת השמעה"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="‪נגן אלבום"/>
 		<rightAlign/>
-		<label text="חפש:" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -270,8 +270,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="‪מאפיינים"/>
 		<rightAlign/>
-		<label text="חפש:" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -279,8 +279,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="‪הורד את כל הקבצים"/>
 		<rightAlign/>
-		<label text="חפש:" tip="הקלד מספרים מילים לחיפוש בספריה"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="‪חפש"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -290,9 +290,9 @@
 		<button id="ID_MEDIA_STOP" text="‪עצור"/>
 		<separator/>
 		<label text="‪:מיקום" tip="עבור למיקום אחר בקובץ המדיה"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="‪:עוצמה" tip="כוונן עוצמת קול"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="‪פתח קובץ"/>
 		<rightAlign/>
@@ -307,11 +307,11 @@
 		<button id="ID_MEDIA_STOP" text="‪עצור"/>
 		<separator/>
 		<label text="‪:מיקום" tip="עבור למיקום אחר בקובץ המדיה"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="‪:מהירות" tip="כוונן את מהירות השמעת קובץ המדיה"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="‪:עוצמה" tip="כוונן עוצמת קול"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="‪פתח"/>
 		<separator/>
@@ -363,10 +363,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="‪שלח בקשת חיפוש חוזרת"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="‪השהה"/>
-		<button id="ID_SEARCH_CLEAR" text="‪נקה"/>
+		<button id="ID_HITMONITOR_CLEAR" text="‪נקה"/>
 		<rightAlign/>
 		<label text="‪...מסנן" tip="הקלד מספר מילים לסינון התוצאות"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="‪...עוד"/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1460,16 +1460,14 @@
 
 	<!-- Home View -->
 
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 	    <para align="left">
 		<styles>
 			<style name="default">
 				<font face="Arial" size="17"/>
-				<colours text="‪000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Arial" size="17" weight="800"/>
-				<colours text="‪800000"/>
 			</style>
 		</styles>
 		<anchor id="Header" width="32" height="172"/>
@@ -1720,7 +1718,7 @@
 		<text>
 			נועד להגדרת העדפות המשתמש:
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">כללי:</link>
 		<gap size="4"/>
@@ -1769,7 +1767,7 @@
 			חלק זה מגדיר את האופן שבה
 			שרזה מתקשרת עם נקודות אחרות ברשתות שיתוף:
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">חיבור:</link>
 		<gap size="4"/>
