--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -76,7 +76,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Prikaži Detalje"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Upiši riječi za filtriranje rezultata potrage"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Više..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -87,7 +87,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Prikaži Detalje"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Upiši riječi za filtriranje rezultata potrage"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Više..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -101,7 +101,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Pokaži Detalje"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Upišite riječi za filtriranje rezultata potrage"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Više..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -120,7 +120,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Detalji"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Upišite riječi za filtriranje rezultata potrage"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Više..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -133,7 +133,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Detalji"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Upišite riječi za filtriranje rezultata potrage"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Više..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -213,32 +213,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Podjeli ...."/>
 		<rightAlign/>
-		<label text="Tražim:" tip="Ovdje upišite što tražite"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Traži"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Napravi Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Obriši Album"/>
 		<rightAlign/>
-		<label text="Traži:" tip="Ovdje upišite što tražite u kolekciji"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Nađi"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Napravi Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Obriši Album"/>
 		<rightAlign/>
-		<label text="Find:" tip="Ovdje upišite što tražite u kolekciji"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Traži"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Pokreni"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Ubaci u Playlistu"/>
 		<rightAlign/>
-		<label text="Find:" tip="Ovdje upišite što tražite u kolekciji"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Nađi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -251,8 +251,8 @@
 		<button id="ID_LIBRARY_COPY" text="Zapamti"/>
 		<button id="ID_LIBRARY_DELETE" text="Obriši"/>
 		<rightAlign/>
-		<label text="Find:" tip="Ovdje upišite što tražite u kolekciji"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Nađi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -260,8 +260,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Ubaci u Playlistu"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Pokreni Album"/>
 		<rightAlign/>
-		<label text="Find:" tip="Ovdje upišite što tražite u kolekciji"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Nađi"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -271,8 +271,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Svojstva"/>
 		<rightAlign/>
-		<label text="Find:" tip="Ovdje upišite što tražite u kolekciji"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Nađi"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -280,8 +280,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Skini Sve"/>
 		<rightAlign/>
-		<label text="Find:" tip="Ovdje upišite što tražite u kolekciji"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Nađi"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -291,9 +291,9 @@
 		<button id="ID_MEDIA_STOP" text="Stani"/>
 		<separator/>
 		<label text="Traži:" tip="Brzo Traži u Datoteci"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Glasnoća:" tip="Namjesti Glasnoću"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Otvori"/>
 		<rightAlign/>
@@ -308,11 +308,11 @@
 		<button id="ID_MEDIA_STOP" text="Stani"/>
 		<separator/>
 		<label text="Traži:" tip="Brzo Traži u Datoteci"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Brzina:" tip="Namijesti Brzinu Odvijanja"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Glasnoća:" tip="Namjesti Glasnoću"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Otvori"/>
 		<separator/>
@@ -363,10 +363,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Ponovi"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Pauziraj"/>
-		<button id="ID_SEARCH_CLEAR" text="Očisti"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Očisti"/>
 		<rightAlign/>
 		<label text="Filter:" tip="Upiši riječi za filtriranje rezultata potrage"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Više..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1457,25 +1457,18 @@
 
 <!-- Documents -->
 <documents>
-
 	<!-- Home View -->
-
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
-
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
-
 		<anchor id="Header" width="32" height="172"/>
 		<newline gap="0"/>
-
 		<group id="1">
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">S P O J I &#160; S E</heading>
@@ -1720,7 +1713,7 @@
 		<text>
 			dijelu ovise o vašem iskustvu.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">Općenito:</link>
 		<gap size="4"/>
@@ -1769,7 +1762,7 @@
 			djelu određuju kako Shareaza komunicira sa ostalim čvorovima u P2P
 			mreži.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">Veza:</link>
 		<gap size="4"/>
