--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -82,7 +82,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Mostra dettagli"/>
 		<rightAlign/>
 		<label text="Filtro:" tip="Inserisci le parole con cui vuoi filtrare i risultati"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Altro..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -93,21 +93,21 @@
 		<button id="ID_SEARCH_DETAILS" text="Mostra dettagli"/>
 		<rightAlign/>
 		<label text="Filtro:" tip="Inserisci le parole con cui vuoi filtrare i risultati"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Altro..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
-		<button id="ID_SEARCH_DOWNLOAD" text="Scarica"/>
-		<button id="ID_BROWSE_LAUNCH" text="Esplora utente"/>
-		<separator/>
 		<button id="ID_SEARCH_SEARCH" text="Cerca ancora..."/>
 		<button id="ID_SEARCH_STOP" text="Stop"/>
+		<separator/>
+		<button id="ID_SEARCH_DOWNLOAD" text="Scarica"/>
+		<button id="ID_BROWSE_LAUNCH" text="Esplora utente"/>
 		<separator/>
 		<button id="ID_SEARCH_PANEL" text="Mostra ricerca"/>
 		<button id="ID_SEARCH_DETAILS" text="Mostra dettagli"/>
 		<rightAlign/>
 		<label text="Filtro:" tip="Inserisci le parole con cui vuoi filtrare i risultati"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Altro..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -126,7 +126,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Mostra dettagli"/>
 		<rightAlign/>
 		<label text="Filtro:" tip="Inserisci le parole con cui vuoi filtrare i risultati"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Altro..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -139,7 +139,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Mostra dettagli"/>
 		<rightAlign/>
 		<label text="Filtro:" tip="Inserisci le parole con cui vuoi filtrare i risultati"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Altro..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -219,32 +219,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Condividi file..."/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole da cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Crea album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Elimina album"/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole per cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Crea album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Elimina album"/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole per cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Apri/Play"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Aggiungi alla playlist"/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole per cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -257,8 +257,8 @@
 		<button id="ID_LIBRARY_COPY" text="Copia"/>
 		<button id="ID_LIBRARY_DELETE" text="Elimina"/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole per cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -266,8 +266,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Aggiungi alla playlist"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Esegui album"/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole per cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -277,8 +277,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Proprietà"/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole per cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -286,8 +286,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Scarica tutti i file"/>
 		<rightAlign/>
-		<label text="Trova:" tip="Inserisci le parole per cercare nella tua libreria"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Cerca"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -297,9 +297,9 @@
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Posizione:" tip="Cerca la posizione nel file multimediale"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Volume:" tip="Regola il volume audio"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Apri file"/>
 		<rightAlign/>
@@ -314,11 +314,11 @@
 		<button id="ID_MEDIA_STOP" text="Stop"/>
 		<separator/>
 		<label text="Posizione:" tip="Cerca la posizione nel file multimediale"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Velocità:" tip="Regola la velocità del file multimediale"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Volume:" tip="Regola il volume audio"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Apri"/>
 		<separator/>
@@ -372,7 +372,7 @@
 		<button id="ID_HITMONITOR_CLEAR" text="Rimuovi"/>
 		<rightAlign/>
 		<label text="Filtro:" tip="Inserisci le parole con cui vuoi filtrare i risultati"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Altro..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1488,15 +1488,13 @@
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
 		<anchor id="Header" width="32" height="172"/>
@@ -1740,7 +1738,7 @@
 		<text>
 			sono relative alle esperienze dell'utente.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CGeneralSettingsPage" format="b">Generale:</link>
 		<gap size="4"/>
 		<text>Interfaccia dell'utente comune per le configurazioni quali i tooltip, le preferenze di minimizzazione, il numero dei formati, i prompt, ecc.</text>
@@ -1779,7 +1777,7 @@
 			controllano come Shareaza interagisce con altri nodi all'interno delle
 			reti peer to peer.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CConnectionSettingsPage" format="b">Connessione:</link>
 		<gap size="4"/>
 		<text>Le velocità e le capacità della tua connessione a Internet.</text>
