--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -87,7 +87,7 @@
 		<button id="ID_SEARCH_DETAILS" text="詳細を表示"/>
 		<rightAlign/>
 		<label text="フィルタ:" tip="検索結果をフィルタリングしたい場合はここにフィルタ文字列を入力して下さい"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="詳細設定..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -98,7 +98,7 @@
 		<button id="ID_SEARCH_DETAILS" text="詳細"/>
 		<rightAlign/>
 		<label text="フィルタ:" tip="検索結果をフィルタリングしたい場合はここにフィルタ文字列を入力して下さい"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="詳細設定..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -112,7 +112,7 @@
 		<button id="ID_SEARCH_DETAILS" text="詳細を表示"/>
 		<rightAlign/>
 		<label text="フィルタ:" tip="検索結果をフィルタリングしたい場合はここにフィルタ文字列を入力して下さい"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="詳細設定..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -131,7 +131,7 @@
 		<button id="ID_SEARCH_DETAILS" text="詳細を表示"/>
 		<rightAlign/>
 		<label text="フィルタ:" tip="検索結果をフィルタリングしたい場合はここにフィルタ文字列を入力して下さい"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="詳細設定..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -144,7 +144,7 @@
 		<button id="ID_SEARCH_DETAILS" text="詳細を表示"/>
 		<rightAlign/>
 		<label text="フィルタ:" tip="検索結果をフィルタリングしたい場合はここにフィルタ文字列を入力して下さい"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="詳細設定..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -224,32 +224,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="共有ファイル..."/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="アルバムを作成..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="アルバムを削除"/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="アルバムを作成..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="アルバムを削除"/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="開く・再生"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="再生リストに追加"/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -262,8 +262,8 @@
 		<button id="ID_LIBRARY_COPY" text="コピー"/>
 		<button id="ID_LIBRARY_DELETE" text="削除"/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -271,8 +271,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="再生リストに追加"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="アルバムを再生"/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -282,8 +282,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="プロパティ"/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -291,8 +291,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="全てのファイルをダウンロード"/>
 		<rightAlign/>
-		<label text="検索:" tip="ライブラリ内を検索するにはここにキーワードを入力して下さい"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="検索"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -302,9 +302,9 @@
 		<button id="ID_MEDIA_STOP" text="停止"/>
 		<separator/>
 		<label text="移動:" tip="メディアファイル内の指定した位置に移動します"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="音量:" tip="オーディオ音声を調節します"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="ファイルを開く"/>
 		<rightAlign/>
@@ -319,11 +319,11 @@
 		<button id="ID_MEDIA_STOP" text="停止"/>
 		<separator/>
 		<label text="移動:" tip="メディアファイル内の指定した位置に移動します"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="スピード:" tip="メディアファイルの再生速度を調節します"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="音量:" tip="オーディオ音声を調節します"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="開く"/>
 		<separator/>
@@ -374,10 +374,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="再問い合わせ"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="一時停止"/>
-		<button id="ID_SEARCH_CLEAR" text="クリア"/>
+		<button id="ID_HITMONITOR_CLEAR" text="クリア"/>
 		<rightAlign/>
 		<label text="フィルタ:" tip="検索結果をフィルタリングしたい場合はここにフィルタ文字列を入力して下さい"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="詳細設定..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1490,23 +1490,17 @@
 <documents>
 
 	<!-- Home View -->
-
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
-
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="MS UI Gothic" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="ＭＳ ゴシック" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
-
 		<anchor id="Header" width="32" height="172"/>
 		<newline gap="0"/>
-
 		<group id="1">
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">接 続 を 開 始 す る</heading>
@@ -1775,7 +1769,7 @@
 		<text>
 			各セクションの設定はユーザの経験に左右されるところがあります。
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CGeneralSettingsPage" format="b">一般:</link>
 		<gap size="4"/>
@@ -1824,7 +1818,7 @@
 			セクションの設定ではShareazaが分散型ピア・ツー・ピアネットワーク内で
 			他のユーザーとどのように対話するかの制御を行います。
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 
 		<link target="raza:page:CConnectionSettingsPage" format="b">接続:</link>
 		<gap size="4"/>
