--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -76,7 +76,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Пан. подробностей"/>
 		<rightAlign/>
 		<label text="Фильтр:" tip="Введите фильтрующие слова"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Ещё..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -87,7 +87,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Пан. подробностей"/>
 		<rightAlign/>
 		<label text="Фильтр:" tip="Введите фильтрующие слова"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Ещё..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -101,7 +101,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Пан. подробностей"/>
 		<rightAlign/>
 		<label text="Фильтр:" tip="Введите фильтрующие слова"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Ещё..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -120,7 +120,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Пан. подробностей"/>
 		<rightAlign/>
 		<label text="Фильтр:" tip="Введите фильтрующие слова"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Ещё..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -133,7 +133,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Пан. подробностей"/>
 		<rightAlign/>
 		<label text="Фильтр:" tip="Введите фильтрующие слова"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Ещё..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -213,32 +213,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Разделять Файлы..."/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Создать альбом..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Удалить альбом"/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Создать альбом..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Удалить альбом"/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Открыть/Играть"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Добавить в список воспроизв."/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -251,8 +251,8 @@
 		<button id="ID_LIBRARY_COPY" text="Копировать"/>
 		<button id="ID_LIBRARY_DELETE" text="Удалить"/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -260,8 +260,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Добавить в список воспроизв."/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Играть альбом"/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -271,8 +271,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Свойства"/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -280,8 +280,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Загрузить все файлы"/>
 		<rightAlign/>
-		<label text="Найти:" tip="Введите слова для поиска по хранилищу"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Найти"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -291,9 +291,9 @@
 		<button id="ID_MEDIA_STOP" text="Стоп"/>
 		<separator/>
 		<label text="Мотать:" tip="Перемещение по медиа файлу (совет: щелкните на ползунок и передвигайтесь стрелками клавиатуры - влево или вправо)"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Громкость:" tip="Изменить громкость (совет: щелкните на ползунок и меняйте громкость стрелками клавиатуры - влево или вправо)"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Открыть файл"/>
 		<rightAlign/>
@@ -308,11 +308,11 @@
 		<button id="ID_MEDIA_STOP" text="Стоп"/>
 		<separator/>
 		<label text="Мотать:" tip="Перемещение по медиа файлу (совет: щелкните на ползунок и передвигайтесь стрелками клавиатуры - влево или вправо)"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Скорость:" tip="Изменить скорость воспроизведения (!нет авто возврата на нормальную скорость до перезапуска файла! и опять же - стрелки)"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Громкость:" tip="Изменить громкость (совет: щелкните на ползунок и меняйте громкость стрелками клавиатуры - влево или вправо)"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Открыть"/>
 		<separator/>
@@ -363,10 +363,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Перезапрос"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Пауза"/>
-		<button id="ID_SEARCH_CLEAR" text="Убрать"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Убрать"/>
 		<rightAlign/>
 		<label text="Фильтр:" tip="Введите слова для фильтрации результатов"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Ещё..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1468,15 +1468,13 @@
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Comic Sans MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
 		<anchor id="Header" width="32" height="172"/>
@@ -1745,7 +1743,7 @@
 		<text>
 			потребуют некоторого пользовательского опыта.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CGeneralSettingsPage" format="b">Основное:</link>
 		<gap size="4"/>
 		<text>Обычные пользовательские настройки как подсказки, минимизация, форматы номеров, запросы, и т.д.</text>
@@ -1785,7 +1783,7 @@
 			контролируют взаимодействие Shareaza с другими узлами в пределах распределенного
 			соединения равноправных узлов.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CConnectionSettingsPage" format="b">Соединения:</link>
 		<gap size="4"/>
 		<text>Скорости и способности вашего соединения с Интернетом.</text>
