--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -82,7 +82,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Me Detaje"/>
 		<rightAlign/>
 		<label text="Filtër:" tip="Shkruani disa fjalë për filtrimin e rezultateve"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Më tepër..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -93,7 +93,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Me Detaje"/>
 		<rightAlign/>
 		<label text="Filtër:" tip="Shkruani disa fjalë për filtrimin e rezultateve"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Më tepër..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -107,7 +107,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Me Detaje"/>
 		<rightAlign/>
 		<label text="Filtër:" tip="Shkruani disa fjalë për filtrimin e rezultateve"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Më tepër..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -126,7 +126,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Me Detaje"/>
 		<rightAlign/>
 		<label text="Filtër:" tip="Shkruani disa fjalë për filtrimin e rezultateve"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Më tepër..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -139,7 +139,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Me Detaje"/>
 		<rightAlign/>
 		<label text="Filtër:" tip="Shkruani disa fjalë për filtrimin e rezultateve"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Më tepër..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -219,32 +219,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Shpërndani Skeda..."/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Krijoni një Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Fshije Albumin"/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Krijoni një Album..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Fshije Albumin"/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Hape/Luaje"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Shtoje në Listë"/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -257,8 +257,8 @@
 		<button id="ID_LIBRARY_COPY" text="Kopjoje"/>
 		<button id="ID_LIBRARY_DELETE" text="Fshije"/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -266,8 +266,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Shtoje në Listë"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Luaje Albumin"/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -277,8 +277,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Veti"/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -286,8 +286,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Shkarkoji Gjithë Skedat"/>
 		<rightAlign/>
-		<label text="Gjej:" tip="Shkruani disa fjalë për kërkimin në librari"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Gjej"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -297,9 +297,9 @@
 		<button id="ID_MEDIA_STOP" text="Ndale"/>
 		<separator/>
 		<label text="Kërko:" tip="Kërkon një pozicion në media-skedë"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Vëllimi:" tip="Ndreq vëllimin e zërit"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Hape"/>
 		<rightAlign/>
@@ -314,11 +314,11 @@
 		<button id="ID_MEDIA_STOP" text="Ndale"/>
 		<separator/>
 		<label text="Kërko:" tip="Kërkon një pozicion në media-skedë"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Shpejtësi:" tip="Ndreq shpejtësinë e media-skedës"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Vëllimi:" tip="Ndreq vëllimin e zërit"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Hape"/>
 		<separator/>
@@ -369,10 +369,10 @@
 		<button id="ID_HITMONITOR_SEARCH" text="Ripyete"/>
 		<separator/>
 		<button id="ID_HITMONITOR_PAUSE" text="Pushoje"/>
-		<button id="ID_SEARCH_CLEAR" text="Pastroje"/>
+		<button id="ID_HITMONITOR_CLEAR" text="Pastroje"/>
 		<rightAlign/>
 		<label text="Filtër:" tip="Shkruani disa fjalë për filtrimin e rezultateve"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Më tepër..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1486,15 +1486,13 @@
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
 		<anchor id="Header" width="32" height="172"/>
@@ -1738,7 +1736,7 @@
 		<text>
 			kërkojnë përvojën e përdoruesit.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CGeneralSettingsPage" format="b">Përgjithësi:</link>
 		<gap size="4"/>
 		<text>Kuadro të ndërfaqes së zakontë të përdoruesit me këshilla, sjellje minimizuese, formate të numrave, lajmërime etj.</text>
@@ -1777,7 +1775,7 @@
 			tregojnë si Shareaza ndërvepron me nyje të tjera brenda rrjeteve pikë-më-pikë
 			të klasifikuara.
 		</text>
-		<newline gap="16" margin="16"/>
+		<newline gap="16" indent="16"/>
 		<link target="raza:page:CConnectionSettingsPage" format="b">Lidhja:</link>
 		<gap size="4"/>
 		<text>Shpejtësitë dhe aftësitë e lidhjes tuaj me Internetin.</text>
